--- a/_posts/2019-07-06-the-us-narrative-today.html
+++ b/_posts/2019-07-06-the-us-narrative-today.html
@@ -2553,107 +2553,107 @@ stories:
   domain: http://www.wjhnews.com/
   link: https://wjhnews.com/man-throws-bicycle-at-officer-after-using-it-to-block-roadway/
 images:
-- name: locked-up-steam-lock-up-steam-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-kandinsky-bv.jpg
-- name: old-door-lock-old-door-lock-2-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-smooth-ride.jpg
-- name: christianity-christianity-under-construction-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-colorful-dream.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-gan-vogh.jpg
-- name: border-fence-border-fence-on-hill-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-far-away.jpg
-- name: adam-smith-adam-smith-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-deep-connections.jpg
-- name: crow_green_zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_green_zuma.jpg
-- name: art-museum-art-museum-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-4.jpg
-- name: downtown-los-angeles-downtown-la-kandinsky-bv.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-kandinsky-bv.JPG
-- name: adam-smith-adam-smith-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-propaganda-leaflets.jpg
-- name: server-cloud-server-racks-clouds-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-wols.jpg
-- name: blossombar-creativity-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-50-62.jpg
-- name: oldhouse-granaryfield-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purple-storm.jpg
-- name: oldroad-old-road-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-diego-rivera1.jpg
-- name: crow-crow-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gred-mash.jpg
-- name: nyc-flag-nycflag-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-ww2-dresden.jpg
-- name: fence-mexico.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-storm.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-neo-instinct.jpg
-- name: oldhouse-granaryfield-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-granite.jpg
-- name: old-house-oldhouse-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purp-paper.jpg
-- name: carry-load-carryload-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-atari-missle.jpg
-- name: downtown-trucksilo-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-rainbow-festival.jpg
-- name: fence-mexico-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dark-rain.jpg
-- name: lincoln-memorial-lincolnmemorial-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-diego-rivera1.jpg
-- name: cyber-api-description-wars-ellisisland-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-ellisisland-nazi-poster.jpg
-- name: windowmountain-window-mountain-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-oily-mcoilface.jpg
-- name: curtain-curtain-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-circuit.jpg
-- name: fence-mexico-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-internet-numbers.jpg
-- name: statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
-- name: nyc-flag-api-conversations-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-atari-asteroids.jpg
-- name: flower-barbed-wire-flower-barbed-wire-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-cinnamon-rolls.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway.jpg
-- name: locked-up-steam-lock-up-steam-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-really-hot.jpg
-- name: curtain-curtain-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colorful-dream.jpg
-- name: yosemite-yosemite-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-colorful-dream.jpg
-- name: supreme-court-supremecourt-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-clean-view.jpg
-- name: old-church-oldchurch-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-diego-rivera1.jpg
-- name: old-barn-old-barn-1500-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-far-away.jpg
-- name: stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-- name: stories-new-65-144-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-65-144-800-500-0-max-0-1--1.jpg
-- name: power-lines-power-lines-empty-space-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-jap-dys-1.jpg
-- name: subway-subway-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colorful-dream.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
-- name: berlinwall-DSC-0084-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dali-two.jpg
-- name: ellis-island-ellis-island-room-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-alien-goggles.jpg
-- name: death-valley-death-valley-national-park-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kand-two.jpg
-- name: gypsymosaic-gypsy-eyes-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-crunch-paper.jpg
-- name: abe-lincoln-one-pablo-blue-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-15-87.jpg
-- name: oldsmallboat-oldsmallboat-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-nazi-poster.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
+- name: old-school-house-old-schoolhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-matrix.jpg
+- name: white-house-whitehouse-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-bright-sand.jpg
+- name: art-kandinsky.comp-7.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-kandinsky.comp-7.jpg
+- name: subway-subway-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-yellow-paper.jpg
+- name: gypsymosaic-gypsy-eyes-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-far-away.jpg
+- name: powerlines-power-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-spagetti-accident.jpg
+- name: liberty-back-statue-liberty-back-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-purp-paper.jpg
+- name: old-door-lock-old-door-lock-2-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-mucha-mult.jpg
+- name: christianity-christianity-under-construction-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crafty-painting.jpg
+- name: adam-smith-adam-smith-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-spagetti-accident.jpg
+- name: castle-wall-DSC-0067-blue-circuit-4.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-4.JPG
+- name: fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
+- name: mistywoods-babyfoot-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-satan-red.jpg
+- name: status-berlin-status-berlin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin.jpg
+- name: sand-hand-sand-hand-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-satan-red.jpg
+- name: lincoln-memorial-lincolnmemorial-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-bright-sand.jpg
+- name: paris-paris-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-blue-circuit.jpg
+- name: nyc-flag-nycflag-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-alien-goggles.jpg
+- name: store-on-corner-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-alien-goggles.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
+- name: statue-face-open-mouth-statue-face-open-mouth-aqua.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-aqua.png
+- name: aws-s3-bluelake-bluelake-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-bluelake-bluelake-still-600.jpg
+- name: berlinwall2-berlinwall-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-yellow-paper.jpg
+- name: cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+- name: lincoln-memorial-lincolnmemorial-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-kand-two.jpg
+- name: power-lines-power-lines-empty-space-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-soul.jpg
+- name: stories-border-traffic.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-border-traffic.jpg
+- name: downtown-los-angeles-downtown-la-graham-sutherland.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-graham-sutherland.JPG
+- name: downtown-trucksilo-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-monet-one.jpg
+- name: old-church-oldchurch-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-gred-mash.jpg
+- name: flower-barbed-wire-flower-barbed-wire-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-horiz-circuit.jpg
+- name: oldhousecars-house-old-cars-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crunch-paper.jpg
+- name: razorcliff-razorcliff-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-circuit.jpg
+- name: machine-road-machine-road-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit-5.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-jap-wav-pr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-jap-wav-pr.JPG
+- name: nyc-flag-nycflag-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colored-circuits.jpg
+- name: razorcliff-razorcliff-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-umberto-bocc.jpg
+- name: old-cabin-oldcabin-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-light-dali.jpg
+- name: amusement-park-amusement-park-2-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-smoking-cigarette.jpg
+- name: server-cloud-server-racks-clouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dark-dali.jpg
+- name: oldhousecars-house-old-cars-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-alberto-giacometti.jpg
+- name: powerlines-power-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-matrix.jpg
+- name: amusement-park-amusement-park-2-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-nazi-poster.jpg
+- name: eduardo-eduardo-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-alien-goggles.jpg
+- name: oldcabin-oldcabin-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-marcel-duchamp.jpg
+- name: old-church-oldchurch-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-oily-mcoilface.jpg
+- name: cargo-ship-cargo-ship-on-sea-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crabapple.jpg
+- name: border-crossing-bordercrossing-gan-vogh.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-gan-vogh.png
+- name: beach-rocks-beach-rocks-currents-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-colorful-dream.jpg
+- name: art-museum-art-museum-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-hot-spicy.jpg
+- name: rockingchair-rockingchair-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-alien-goggles.jpg
 ---
 Holocaust Survivor And Forgiveness Advocate, Eva Kor.&nbsp;Webster Groves Cancels Second Night Of Fireworks.&nbsp;Strong Start, Weak Finish.&nbsp;Michigan Woman Sues Jimmy John's For Putting Mustard On Her Sandwich, Loses Case.&nbsp;Iredell Posts Fourth Consecutive Victory.&nbsp;Towns In Six Vermont Counties Now Eligible For Federal Aid For Flooding Damage.&nbsp;Several Groups Recognized At Recent Beebe School Board Meeting.&nbsp;Five Wild Animals You May Not Know Live In Utah.&nbsp;
